--- a/appbase/index.html
+++ b/appbase/index.html
@@ -183,129 +183,6 @@
               </button>
 
               <div class="ac-ctrl-layout">
-                <article
-                  class="ac-panel-card ac-panel-card--overview ac-ctrl-summary"
-                  aria-labelledby="painel-login-title"
-                >
-                  <header class="ac-ctrl-summary__head">
-                    <div class="ac-ctrl-summary__titles">
-                      <h3
-                        id="painel-login-title"
-                        class="ac-ctrl-summary__title"
-                        data-i18n="app.panel.stage.title"
-                      >
-                        Painel de controle
-                      </h3>
-                      <p
-                        class="ac-ctrl-summary__subtitle"
-                        data-login-user
-                        data-i18n="app.panel.summary.empty"
-                      >
-                        Não configurado
-                      </p>
-                    </div>
-                    <button
-                      class="ac-ctrl-summary__action"
-                      type="button"
-                      data-overlay-trigger="session"
-                      aria-haspopup="dialog"
-                      aria-controls="panel-session-overlay"
-                      aria-expanded="false"
-                      aria-label="Gerenciar sessão"
-                      title="Gerenciar sessão"
-                    >
-                      ⋯
-                    </button>
-                  </header>
-                  <dl class="ac-ctrl-summary__meta" role="list">
-                    <div>
-                      <dt data-i18n="app.panel.summary.account">Conta</dt>
-                      <dd data-login-account>—</dd>
-                    </div>
-                    <div>
-                      <dt data-i18n="app.panel.summary.last_login">Último acesso</dt>
-                      <dd data-login-last>—</dd>
-                    </div>
-                    <div>
-                      <dt>Último sync</dt>
-                      <dd data-summary-sync>—</dd>
-                    </div>
-                    <div>
-                      <dt>Último backup</dt>
-                      <dd data-summary-backup>—</dd>
-                    </div>
-                  </dl>
-                  <div
-                    class="ac-session-status ac-ctrl-summary__kpis"
-                    role="group"
-                    aria-label="Indicadores do painel"
-                    data-panel-kpis-group
-                  >
-                    <article class="ac-session-status__item" data-panel-kpi="status">
-                      <p
-                        class="ac-session-status__label"
-                        data-i18n="app.panel.kpis.status.label"
-                      >
-                        Status da sessão
-                      </p>
-                      <p class="ac-session-status__value">
-                        <span
-                          class="ac-dot ac-dot--crit"
-                          aria-hidden="true"
-                          data-panel-status-dot
-                        ></span>
-                        <span
-                          data-panel-status-label
-                          data-i18n="app.panel.kpis.status.states.disconnected"
-                        >
-                          Desconectado
-                        </span>
-                      </p>
-                      <p
-                        class="ac-session-status__meta"
-                        data-panel-status-hint
-                        data-i18n="app.panel.kpis.status.hint.empty"
-                      >
-                        Cadastre um usuário para iniciar a sessão.
-                      </p>
-                    </article>
-                    <article class="ac-session-status__item" data-panel-kpi="last-login">
-                      <p
-                        class="ac-session-status__label"
-                        data-i18n="app.panel.kpis.last_login.label"
-                      >
-                        Último acesso
-                      </p>
-                      <p class="ac-session-status__value ac-mono" data-panel-last-login>
-                        —
-                      </p>
-                      <p
-                        class="ac-session-status__meta"
-                        data-panel-last-login-hint
-                        data-i18n="app.panel.kpis.last_login.hint.empty"
-                      >
-                        Nenhum registro disponível.
-                      </p>
-                    </article>
-                    <article class="ac-session-status__item" data-panel-kpi="events">
-                      <p
-                        class="ac-session-status__label"
-                        data-i18n="app.panel.kpis.events.label"
-                      >
-                        Eventos registrados
-                      </p>
-                      <p class="ac-session-status__value" data-panel-login-count>0</p>
-                      <p
-                        class="ac-session-status__meta"
-                        data-panel-login-hint
-                        data-i18n="app.panel.kpis.events.hint.empty"
-                      >
-                        Aguardando primeiro registro.
-                      </p>
-                    </article>
-                  </div>
-                </article>
-
                 <section class="ac-ctrl-board" aria-labelledby="painel-stage-title">
                   <header class="ac-ctrl-board__head">
                     <div class="ac-ctrl-board__titles">
@@ -380,107 +257,86 @@
                         </div>
                       </header>
                       <div class="ac-sync" data-sync-panel>
-                        <div class="ac-sync__status-bar" role="status">
-                          <p
-                            class="ac-sync__status-message ac-mono"
-                            data-sync-status-message
-                            aria-live="polite"
-                          >
-                            Nenhuma sincronização ativa no momento.
-                          </p>
-                          <button
-                            class="ac-btn ac-btn--ghost ac-sync__signout"
-                            type="button"
-                            data-sync-signout-all
-                          >
-                            Deslogar de todos
-                          </button>
-                        </div>
-                        <div class="ac-sync__toggles" role="group" aria-label="Provedores">
-                          <button
-                            class="ac-sync-toggle"
-                            type="button"
-                            data-sync-toggle="google-drive"
-                            aria-pressed="false"
-                          >
-                            <span class="ac-sync-toggle__icon" aria-hidden="true">☁️</span>
-                            <span class="ac-sync-toggle__body">
-                              <span class="ac-sync-toggle__label">Google Drive</span>
-                              <span class="ac-sync-toggle__note">
-                                Integração oficial com autenticação Google.
-                              </span>
-                            </span>
-                            <span class="ac-sync-toggle__status-badge">
-                              <span
-                                class="ac-sync-toggle__indicator"
-                                data-sync-indicator
-                                aria-hidden="true"
-                              ></span>
-                              <span
-                                class="ac-sync-toggle__status ac-mono"
-                                data-sync-status
-                                aria-live="polite"
-                              >
-                                Inativo
-                              </span>
-                            </span>
-                          </button>
-                          <button
-                            class="ac-sync-toggle"
-                            type="button"
-                            data-sync-toggle="one-drive"
-                            aria-pressed="false"
-                          >
-                            <span class="ac-sync-toggle__icon" aria-hidden="true">🗂️</span>
-                            <span class="ac-sync-toggle__body">
-                              <span class="ac-sync-toggle__label">OneDrive</span>
-                              <span class="ac-sync-toggle__note">
-                                Sincronize com contas corporativas Microsoft.
-                              </span>
-                            </span>
-                            <span class="ac-sync-toggle__status-badge">
-                              <span
-                                class="ac-sync-toggle__indicator"
-                                data-sync-indicator
-                                aria-hidden="true"
-                              ></span>
-                              <span
-                                class="ac-sync-toggle__status ac-mono"
-                                data-sync-status
-                                aria-live="polite"
-                              >
-                                Inativo
-                              </span>
-                            </span>
-                          </button>
-                        </div>
-                        <div
-                          class="ac-sync__summary"
-                          role="group"
-                          aria-label="Status da sincronização"
-                        >
-                          <div class="ac-sync-metric" tabindex="0" aria-live="polite">
-                            <span class="ac-sync-metric__label">Última atualização</span>
-                            <span class="ac-sync-metric__value ac-mono" data-sync-last-update>
-                              —
-                            </span>
-                          </div>
-                          <div class="ac-sync-metric" tabindex="0" aria-live="polite">
-                            <span class="ac-sync-metric__label">Servidor</span>
-                            <span class="ac-sync-metric__value ac-mono" data-sync-server>
-                              api.marco.local
-                            </span>
-                          </div>
-                          <div class="ac-sync-metric" tabindex="0" aria-live="polite">
-                            <span class="ac-sync-metric__label">Dispositivos conectados</span>
-                            <span
-                              class="ac-sync-metric__value ac-mono"
-                              data-sync-connected-count
+                        <div class="ac-sync__header">
+                          <div class="ac-sync__status">
+                            <p
+                              class="ac-sync__status-message"
+                              data-sync-status-message
+                              role="status"
+                              aria-live="polite"
                             >
-                              0
-                            </span>
+                              Sincronização desativada no momento.
+                            </p>
+                          </div>
+                          <div class="ac-sync__actions">
+                            <button
+                              class="ac-btn ac-btn--primary ac-sync__toggle"
+                              type="button"
+                              data-sync-action
+                              aria-pressed="false"
+                            >
+                              Sincronizar
+                            </button>
                           </div>
                         </div>
+                        <div class="ac-sync__providers" role="list">
+                          <article
+                            class="ac-sync-provider"
+                            data-sync-provider="google-drive"
+                            role="listitem"
+                          >
+                            <div class="ac-sync-provider__details">
+                              <span class="ac-sync-provider__icon" aria-hidden="true">☁️</span>
+                              <div class="ac-sync-provider__text">
+                                <h4 class="ac-sync-provider__name">Google Drive</h4>
+                                <p class="ac-sync-provider__description">
+                                  Integração oficial com autenticação Google.
+                                </p>
+                              </div>
+                            </div>
+                            <span
+                              class="ac-sync-provider__badge ac-sync-provider__badge--inactive"
+                              data-sync-provider-status
+                            >
+                              Inativo
+                            </span>
+                          </article>
+                          <article
+                            class="ac-sync-provider"
+                            data-sync-provider="microsoft-onedrive"
+                            role="listitem"
+                          >
+                            <div class="ac-sync-provider__details">
+                              <span class="ac-sync-provider__icon" aria-hidden="true">🗂️</span>
+                              <div class="ac-sync-provider__text">
+                                <h4 class="ac-sync-provider__name">OneDrive</h4>
+                                <p class="ac-sync-provider__description">
+                                  Sincronize com contas corporativas Microsoft.
+                                </p>
+                              </div>
+                            </div>
+                            <span
+                              class="ac-sync-provider__badge ac-sync-provider__badge--inactive"
+                              data-sync-provider-status
+                            >
+                              Inativo
+                            </span>
+                          </article>
+                        </div>
+                        <dl class="ac-sync__meta">
+                          <div class="ac-sync__meta-item">
+                            <dt>Última sincronização</dt>
+                            <dd class="ac-mono" data-sync-last-update>—</dd>
+                          </div>
+                          <div class="ac-sync__meta-item">
+                            <dt>Servidor</dt>
+                            <dd class="ac-mono">api.marco.local</dd>
+                          </div>
+                          <div class="ac-sync__meta-item">
+                            <dt>Dispositivos conectados</dt>
+                            <dd class="ac-mono">0</dd>
+                          </div>
+                        </dl>
                       </div>
                     </article>
 
